--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,149 @@
+/******** SIDE 1*********/
+/*header*/
 
+.header{
+    margin-right: 1.5rem;
+    margin-left: 1.5rem;
+    height: 3rem;
+    background-color:orange;
+    padding-left: 1rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1rem;
+    border-style: groove;
+    border-width: 10px;
+    border-color:gray;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.header a{
+    padding: 30px 35px;
+    color: black;
+    font-size: x-large;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+}
+
+
+body{
+    margin: 0;
+    font-family: Helvetica, Arial, sans-serif;
+}
+h1{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 300;
+    font-size: 2rem;
+    text-shadow: 1px 1px 1px #0d0b0b;
+}
+.ingress{
+    font-weight: 600;
+    color:darkslategray;
+}
+
+article, aside{
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+}
+
+aside> p{
+    font-family: 'Times New Roman', Times, serif;
+    font-style: oblique;
+    font-size: 16px;
+}
+
+/**Grid**/
+
+
+.grid-container{
+    display: grid;
+    grid-template-rows: minmax(100px, auto);
+    grid-auto-columns: minmax(300px, 100vw)auto;
+    }
+
+ .ingress{
+    display: grid;
+    grid-row: 1;
+    grid-column: 1/4;
+    }
+
+
+.mainbox {
+    font-size: larger;
+    display: grid;
+    }
+
+.text1{
+    display: grid;
+    grid-column: 3/4;
+    grid-row: 4;
+    width: 45vw;
+    }
+
+.text2{
+    display: grid;
+    grid-column: 1/2;
+    grid-row: 4;
+    width: 45vw;
+    }
+
+.photoref1{
+    display: grid;
+    grid-column: 1/2;
+    grid-row: 3;
+    font-style: italic;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.photoref2{
+    display: grid;
+    grid-column: 3/4;
+    grid-row: 3;
+    font-style: italic;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+        
+.side-box1{
+    
+    grid-column: 1/2;
+    grid-row: 2;
+    background-image: url("../media/pilestredet.jpg");
+    background-size: cover;
+    height: 30vw;
+    max-height: 50vw;
+    width: 44vw;
+    }
+
+.side-box2{
+    
+    grid-column: 3/4;
+    grid-row: 2;
+    background-image: url("../media/kjeller_campus.jpeg");
+    background-size: cover;
+    height: 30vw;
+    max-height: 50vw;
+    width: 44vw;  
+    }
+
+
+/*footer*/
+    footer{
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;    
+    border-style: groove;
+    border-width: 5px;
+    border-color:gray;
+    border-radius: 10px;
+    font-size: smaller;
+    text-align: left;
+    
+    background-color: antiquewhite;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    
+    }
+
+    /*************side 1 ends**************/
