--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 
-/*header*/
+/****header/nav******/
 
 .header{
     margin-right: 1.5rem;
     margin-left: 1.5rem;
     height: 3rem;
-    background-color:orange;
+    background-color: darkorange;
     padding-left: 1rem;
     padding-top: 1.5rem;
     padding-bottom: 1rem;
@@ -19,46 +19,56 @@
 .header a{
     padding: 30px 35px;
     color: black;
-    font-size: x-large;
+    font-size: 1.5rem;
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
 }
+
+/**** article/main ***/
 
 
 body{
     margin: 0;
     font-family: Helvetica, Arial, sans-serif;
+    font-size: 1.1rem;
 }
 h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 300;
     font-size: 2rem;
-    text-shadow: 1px 1px 1px #0d0b0b;
+    text-shadow: 10px 10px 20px red;
+}
+h2{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.8rem;
+    text-decoration: underline;
+    
 }
 .ingress{
     font-weight: 600;
     color:darkslategray;
+    font-size: 1.5rem;
 }
 
-article, aside{
+article{
     margin-left: 1.5rem;
     margin-right: 1.5rem;
 }
 
-aside> p{
-    font-family: 'Times New Roman', Times, serif;
-    font-style: oblique;
-    font-size: 16px;
-}
+
 
 /**Grid**/
-
+/* body part containing grids of 4*3*/
+/*4 rows: 1 introduction paragraph (ingress), 1 image box, 1 reference for image and 1 text section(text left/right)*/
+/*3 columns: 2 for images/texts left or right and 1 in the middle to separate images*/
+/*mainbox contains the whole main/article*/
 
 .grid-container{
     display: grid;
     grid-template-rows: minmax(100px, auto);
     grid-auto-columns: minmax(300px, 100vw)auto;
     }
+    
 
  .ingress{
     display: grid;
@@ -72,21 +82,21 @@ aside> p{
     display: grid;
     }
 
-.text1{
+.text-right{
     display: grid;
     grid-column: 3/4;
     grid-row: 4;
     width: 45vw;
     }
 
-.text2{
+.text-left{
     display: grid;
     grid-column: 1/2;
     grid-row: 4;
     width: 45vw;
     }
 
-.photoref1{
+.photo-ref-right{
     display: grid;
     grid-column: 1/2;
     grid-row: 3;
@@ -94,7 +104,7 @@ aside> p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.photoref2{
+.photo-ref-left{
     display: grid;
     grid-column: 3/4;
     grid-row: 3;
@@ -102,8 +112,7 @@ aside> p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
         
-.side-box1{
-    
+.image-left{
     grid-column: 1/2;
     grid-row: 2;
     background-image: url("../media/pilestredet.jpg");
@@ -113,8 +122,7 @@ aside> p{
     width: 44vw;
     }
 
-.side-box2{
-    
+.image-right{
     grid-column: 3/4;
     grid-row: 2;
     background-image: url("../media/kjeller_campus.jpeg");
@@ -126,7 +134,8 @@ aside> p{
 
 
 /*footer*/
-    footer{
+/* 3 columns and 1 row using list*/
+    .footer-container{
     margin-left: 1.5rem;
     margin-right: 1.5rem;    
     border-style: groove;
@@ -135,17 +144,20 @@ aside> p{
     border-radius: 10px;
     font-size: smaller;
     text-align: left;
-
-    background-color: antiquewhite;
+    background-color:bisque;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    padding-right: 2rem;
-    padding-left: 2rem;
+    padding-top: 0.5rem;
     }
 
+.container{
+    width: 960px;        
+    }    
     
-
+.container li{
+    list-style-type: none;
+    line-height: 1.6;
+    }
     
 
    
