Startet på campus side

--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,9 @@ article{
     list-style-type: none;
     line-height: 1.6;
     }
-    
 
-   
+
+/*-------- CAMPUS PAGE --------*/
+
+
+/*  GRID  */
