La til grid og tekst

--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,47 @@ article{
 
 
 /*-------- CAMPUS PAGE --------*/
+.campus-body{
+    background-color: #ADA7A7;
+}
+
+.main-campus{
+    background-color: #F5F7ED;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    margin-top: 4vh;
+    margin-bottom: 10vh;
+}
+
+.campus-h1{
+    padding-left: 1.5rem; 
+}
 
 
 /*  GRID  */
+
+.campus-grid-container{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    display: grid;
+    grid-template-columns: 40vw 40vw;
+    grid-template-rows: 40vh 40vh;
+}
+
+.campus-grid-item-two{
+    grid-column: 2/2;
+    grid-row: 1/2;
+}
+
+#img-p35{
+    width: 30vw; 
+    height: 35vh;
+    object-fit: cover;
+    padding-left: 4vw;
+    padding-right: 4vw;
+}
+
+#campus-photo-credit{
+    padding-left: 5vw;
+    font-size: 0.8rem;
+}
