--- a/css/style.css
+++ b/css/style.css
@@ -205,3 +205,10 @@ article{
     padding-left: 5vw;
     font-size: 0.8rem;
 }
+
+.topicalpage-body{
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
