--- a/css/style.css
+++ b/css/style.css
@@ -207,8 +207,10 @@ article{
 }
 
 .topicalpage-body{
-    margin-left: 0;
-    margin-right: 0;
-    margin-top: 0;
-    margin-bottom: 0;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-bottom: 1rem;
+  width: 100%;
+  max-width: 90%;
+  height: 100%;
   }
