--- a/css/style.css
+++ b/css/style.css
@@ -293,6 +293,11 @@ article{
     font-size: 0.8rem;
 }
 
+#canteens-photo-credit2{
+    padding-left: 5vw;
+    font-size: 0.8rem;
+}
+
 .canteens-grid-item-five{
     
 }
