Endret canteen fil til canteen.html

--- a/css/style.css
+++ b/css/style.css
@@ -293,14 +293,9 @@ article{
     font-size: 0.8rem;
 }
 
-#canteens-photo-credit2{
-    padding-left: 5vw;
-    font-size: 0.8rem;
-}
-
 .canteens-grid-item-five{
     
 }
-.canteens-grid-item-six{
+.campus-grid-item-six{
     
 }
