--- a/css/style.css
+++ b/css/style.css
@@ -2,24 +2,22 @@
 /****header/nav******/
 
 .header{
-    margin-right: 2rem;
-    margin-left: 2rem;
-    height: 5rem;
-    background-color: darkorange;
-   
-    padding-top: 1.5rem;
-    padding-bottom: 0.5rem;
-    border-style: groove;
-    border-width: 10px;
-    border-color:gray;
-    border-radius: 10px;
+    
+    height: 6rem;
+    margin: 0px;
+    padding: 0px;
+    padding-top: 2rem;
+    padding-bottom: 1rem;;
     text-align: center;
+    background: #0ab4ba;
+    font-size: 30px;
 }
 
 .header a{
-    padding: 30px 35px;
+    padding: 30px 30px 30px 30px;
+    
     color: black;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
 }
@@ -28,7 +26,8 @@
 
 
 body{
-    
+    padding: 0px;
+    margin: 0px;
     
     font-family: Helvetica, Arial, sans-serif;
     font-size: 1.1rem;
@@ -37,6 +36,7 @@ body{
 }
 h1{
     margin-left: 2rem;
+    margin-right: 2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 300;
     font-size: 2rem;
@@ -46,20 +46,18 @@ h2{
     margin-left: 2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.8rem;
-    text-decoration: underline;
+
     
 }
 .ingress{
-    font-weight: 600;
+    margin: 0px;
+    padding:0px;
+    font-weight: 400;
     color:darkslategray;
     font-size: 1.5rem;
 }
 
-article{
-    margin-left: 2rem;
-    margin-right: 2rem;
-    
-}
+
 
 
 
@@ -71,15 +69,15 @@ article{
 
 .grid-container{
     display: grid;
-    grid-template-rows: minmax(100px, auto);
-    grid-auto-columns: minmax(300px, 100vw)auto;
+    grid-template-rows: minmax(auto);
+    grid-template-columns: minmax(auto)
     }
     
 
  .ingress{
     display: grid;
     grid-row: 1;
-    grid-column: 1/4;
+    grid-column: 1/3;
     }
 
 
@@ -87,24 +85,27 @@ article{
     font-size: larger;
     display: grid;
     
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-    padding-bottom: 2rem;
+    grid-gap: 10px;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    
     
     }
+ 
+ 
 
 .text-right{
     display: grid;
-    grid-column: 3/4;
+    grid-column: 2/3;
     grid-row: 4;
-    width: 35vw;
+    width: 45vw;
     }
 
 .text-left{
     display: grid;
     grid-column: 1/2;
     grid-row: 4;
-    width: 35vw;
+    width: 45vw;
     }
 
 .photo-ref-right{
@@ -117,10 +118,11 @@ article{
 
 .photo-ref-left{
     display: grid;
-    grid-column: 3/4;
+    grid-column: 2/3;
     grid-row: 3;
     font-style: italic;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
 }
         
 .image-left{
@@ -128,44 +130,44 @@ article{
     grid-row: 2;
     background-image: url("../media/pilestredet.jpg");
     background-size: cover;
-    height: 28vw;
+    height: 35vw;
+    max-height: auto;
     
-    width: 38vw;
+    width: 45vw;
     }
 
 .image-right{
-    grid-column: 3/4;
+    grid-column: 2/3;
     grid-row: 2;
     background-image: url("../media/kjeller_campus.jpeg");
     background-size: cover;
-    height: 28vw;
+    height: 35vw;
+    max-height: auto;
     
-    width: 38vw;  
+    width: 45vw;  
     }
 
 
 /*footer*/
 /* 3 columns and 1 row using list*/
     .footer-container{
-    margin-left: 2rem;
-    margin-right: 2rem;    
-    
-    font-size: smaller;
-    text-align: left;
-    border-style: groove;
-    border-width: 5px;
-    border-color:gray;
-    border-radius: 10px;
-    background-color:bisque;
+    background: #0ab4ba;
+    font-size: small;
+   
+    height: 13rem;
+   
+    padding-right: 1.5rem;
     display: flex;
     justify-content: space-between;
-    padding-top: 0.5rem;
+   
     }
 
 
 .container li{
     list-style-type: none;
     line-height: 1.6;
+    text-align: left;
+    
     }
 
 
