--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 .header{
     display: grid;
     grid-template-columns: auto auto auto auto auto;
-    line-height: 1.6;
+    line-height: 7rem;
     text-align: center;
     background: #0ab4ba;
     font-size: 30px;
@@ -129,7 +129,28 @@ h2{
 
 /**Grid for mobile viwer max 400px**/
 
+/*footer*/
 
+footer{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background: #0ab4ba;
+    font-size: small;
+    
+}
+
+.footer-container{
+    grid-row: 1;
+    padding-top: 1rem;
+    background: #0ab4ba;
+    text-align: left
+}
+
+.footer-container li{
+    list-style-type: none;
+    line-height: 1.6;
+    
+}
 
 @media only screen and (max-width: 400px) {
 
@@ -185,33 +206,15 @@ h2{
         grid-column: 1/3;
         grid-row: 8;
       }  
+
+      .footer-container ul {
+        padding-inline-start: 20px;
+    }
+    .header {
+        line-height: 3.5rem;
+    }
      
   }
-
-
-/*footer*/
-
-footer{
-    background: #0ab4ba;
-    font-size: small;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    
-}
-
-.container{
-    grid-template-columns: 1/2;
-    padding-top: 1rem;
-    margin-right: 50px;
-    background: #0ab4ba;
-    width: 33vw;
-}
-
-.container li{
-    list-style-type: none;
-    line-height: 1.6;
-    
-}
 
 
 /*-------- CAMPUS PAGE --------*/
