--- a/css/style.css
+++ b/css/style.css
@@ -226,9 +226,15 @@ footer{
 
 .main-campus{
     background-color: #f0f7f4;
+    box-sizing: border-box;
     margin-left: 10vw;
     margin-right: 10vw;
     margin-bottom: 3vh;
+
+    @media (max-width: 1300px){
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
 }
 
 .campus-h1{
@@ -244,53 +250,68 @@ footer{
 /*  GRID  */
 
 .campus-grid-container{
-    padding-left: 2rem;
-    padding-right: 2rem;
     display: grid;
-    grid-template-columns: 40vw 40vw;
-    grid-template-rows: 40vh 40vh 40vh;
-}
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}    
 
 .campus-grid-container > div{
-    padding-right: 5rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    padding-bottom: 4rem;
     font-size: 16px;
-    line-height: 1.5em;
-    white-space:inherit;
+    line-height: 24px;
 }
 
 .campus-grid-item-one{
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 .campus-grid-item-two{
-    grid-column: 2/2;
-    grid-row: 1/3;
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    padding-top: 4rem;
+    width: 40vw;
+    height: 40vh;
 }
 
 .campus-grid-item-three{
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
 }
+
 .campus-grid-item-four{
-    grid-column: 2/2;
-    grid-row: 2/3;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    padding-top: 4rem;
+    width: 40vw;
+    height: 40vh;
+}
+
+.campus-grid-item-five{
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+}
+
+.campus-grid-item-six{
+    grid-column: 2/3;
+    grid-row: 3 / 4;
+    padding-top: 4rem;
+    width: 40vw;
+    height: 40vh;
 }
 
 .campus-photos{
-    width: 30vw; 
-    height: 35vh;
     object-fit: cover;
-    padding-left: 4vw;
-    padding-right: 4vw;
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
 }
 
 .campus-photo-credit{
     padding-left: 5vw;
     font-size: 0.8rem;
-}
-
-.campus-grid-item-five{
-    
-}
-.campus-grid-item-six{
-    
 }
 
 /*-------- Canteens PAGE --------*/
