--- a/css/style.css
+++ b/css/style.css
@@ -253,32 +253,47 @@ footer{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    @media (max-width: 850px){
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: 1fr;
+    }
 }    
 
 .campus-grid-container > div{
     padding-right: 2rem;
     padding-left: 2rem;
-    padding-bottom: 4rem;
     font-size: 16px;
     line-height: 24px;
+    max-height: 400px;
 }
 
 .campus-grid-item-one{
-    grid-column: 1/2;
-    grid-row: 1/2;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
 }
 
 .campus-grid-item-two{
     grid-column: 2 / 3;
     grid-row: 1 / 3;
     padding-top: 4rem;
+    padding-bottom:15rem;
     width: 40vw;
     height: 40vh;
+    @media (max-width: 850px){
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        width: 80vw;
+        height: 80vh;
+    }
 }
 
 .campus-grid-item-three{
     grid-column: 1 / 2;
     grid-row: 2 / 3;
+    @media (max-width: 850px){
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;
+    }
 }
 
 .campus-grid-item-four{
@@ -287,11 +302,22 @@ footer{
     padding-top: 4rem;
     width: 40vw;
     height: 40vh;
+    @media (max-width: 850px){
+        grid-column: 1 / 3;
+        grid-row: 4 / 5;
+        width: 80vw;
+        height: 60vh;
+    }
 }
 
 .campus-grid-item-five{
     grid-column: 1 / 2;
     grid-row: 3 / 4;
+    @media (max-width: 850px){
+        grid-column: 1 / 3;
+        grid-row: 5 / 6;
+
+    }
 }
 
 .campus-grid-item-six{
@@ -300,13 +326,19 @@ footer{
     padding-top: 4rem;
     width: 40vw;
     height: 40vh;
+    @media (max-width: 850px){
+        grid-column: 1 / 3;
+        grid-row: 6 / 7;
+        width: 80vw;
+        height: 80vh;
+    }
 }
 
 .campus-photos{
     object-fit: cover;
     border-radius: 5px;
     width: 100%;
-    height: 100%;
+    height: 80%;
 }
 
 .campus-photo-credit{
