--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ footer{
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
     @media (max-width: 850px){
-        grid-template-rows: repeat(6, 1fr);
+        grid-template-rows: repeat(auto-fit, minmax(height of the items , 1fr));
         grid-template-columns: 1fr;
     }
 }    
@@ -264,26 +264,28 @@ footer{
     padding-left: 2rem;
     font-size: 16px;
     line-height: 24px;
-    max-height: 400px;
+    row-gap: 0;
 }
 
 .campus-grid-item-one{
     grid-column: 1 / 2;
     grid-row: 1 / 2;
+    @media (max-width: 850px){
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+    }
 }
 
 .campus-grid-item-two{
     grid-column: 2 / 3;
     grid-row: 1 / 3;
-    padding-top: 4rem;
-    padding-bottom:15rem;
-    width: 40vw;
+    padding-top: 2rem;
+    width: fit-content;
     height: 40vh;
     @media (max-width: 850px){
-        grid-column: 1 / 2;
+        grid-column: 1 / 3;
         grid-row: 2 / 3;
-        width: 80vw;
-        height: 80vh;
+        width: fit-content;
     }
 }
 
@@ -295,18 +297,17 @@ footer{
         grid-row: 3 / 4;
     }
 }
-
 .campus-grid-item-four{
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-    padding-top: 4rem;
+    padding-top: 2rem;
     width: 40vw;
     height: 40vh;
     @media (max-width: 850px){
         grid-column: 1 / 3;
         grid-row: 4 / 5;
-        width: 80vw;
-        height: 60vh;
+        height: fit-content;
+        width: fit-content;
     }
 }
 
@@ -316,21 +317,21 @@ footer{
     @media (max-width: 850px){
         grid-column: 1 / 3;
         grid-row: 5 / 6;
-
     }
 }
 
 .campus-grid-item-six{
     grid-column: 2/3;
     grid-row: 3 / 4;
-    padding-top: 4rem;
+    padding-top: 2rem;
     width: 40vw;
     height: 40vh;
     @media (max-width: 850px){
         grid-column: 1 / 3;
         grid-row: 6 / 7;
-        width: 80vw;
-        height: 80vh;
+        width: fit-content;
+        height: fit-content;
+        padding-bottom: 2rem;
     }
 }
 
@@ -342,7 +343,7 @@ footer{
 }
 
 .campus-photo-credit{
-    padding-left: 5vw;
+    padding-left: 2vw;
     font-size: 0.8rem;
 }
 
