--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,8 @@ h1{
 h2{
     margin-left: 2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 1.8rem;    
+    font-size: 1.8rem;
+    font-weight: 600;  
 }
 
 .ingress{
