--- a/css/style.css
+++ b/css/style.css
@@ -223,13 +223,14 @@ footer{
   }
 
 
-/*-------- CAMPUS PAGE --------*/
+/*-------- P35 PAGE --------*/
 
-.campus-body{
+.body-p35{                          
     background-color: #dcf0f8;
 }
 
-.main-campus{
+/*media query to better utilize the space on smaller devices*/
+.main-p35{
     background-color: #f0f7f4;
     box-sizing: border-box;
     margin-left: 10vw;
@@ -241,35 +242,44 @@ footer{
     }
 }
 
-.campus-h1{
+.h1-p35{
     padding-left: 1.5rem; 
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
 }
 
-.campus-h2{
+/*remove margin from to set it to the left and avoid gaps*/
+
+.h2-p35{
     margin-left:0;
     margin-top: 0;
 }
 
+
 /*  GRID  */
 
-.campus-container{
+/*grid container with gap to create room*/
+
+.container-p35{
     display: grid;
-    margin: 0 auto;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: auto;
+    margin-right: auto;
     gap: 1rem;
 }
 
-
-
+/*media query for larger devices makes 2 columns instead of 1*/
 
 @media (min-width: 800px){
-    .campus-container{
+    .container-p35{
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
-.campus-container > div{
+/*flex in div to center the elements and ensure the photo credits stay below the images*/
+
+.container-p35 > div{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     padding-bottom: 2rem;
@@ -278,19 +288,19 @@ footer{
     flex-flow: column wrap;
 }
 
-.campus-container > div > p{
-    font-size:16px;
+.container-p35 > div > p{
+    font-size: 16px;
     line-height: 1.4rem;
 }
 
-.campus-photos{
+.photos-p35{
     object-fit: cover;
     max-width: 100%;
     height: 300px;
     align-items: center;
 }
 
-.campus-photo-credit{
+.photo-credit-p35{
     padding-top: 0.5rem;
     font-size: 11px;
     padding-left: 2vw;
@@ -362,7 +372,7 @@ footer{
 .canteens-grid-item-five{
     
 }
-.campus-grid-item-six{
+.-grid-item-six{
     
 }
 
