Fikset opp i canteen css

--- a/css/style.css
+++ b/css/style.css
@@ -326,27 +326,30 @@ footer{
 .canteens-h1{
     padding-left: 1.5rem;
     padding-top: 1.5rem;
-    padding-bottom: 1.6rem; 
+    padding-bottom: 1.5rem; 
 }
 
 
 /*  GRID  */
 
 .canteens-grid-container{
-    padding-left: 2rem;
-    padding-right: 2rem;
     display: grid;
-    grid-template-columns: 40vw 40vw;
-    grid-template-rows: 40vh 40vh 40vh;
+    margin: 0 auto;
+    gap: 1rem;
 }
 
 .canteens-grid-container > div{
-    padding-right: 5rem;
-    font-size: 16px;
-    line-height: 1.5em;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    padding-bottom: 1.5rem;
+    display: flex;
+    justify-content: center;
+    flex-flow: column wrap;
 }
 
-.canteens-grid-item-one{
+.canteens-grid-container > div > p{
+    font-size: 16px;
+    line-height: 1.4em;
 }
 
 .canteens-grid-item-two{
