--- a/css/style.css
+++ b/css/style.css
@@ -352,18 +352,6 @@ footer{
     line-height: 1.4em;
 }
 
-.canteens-grid-item-two{
-    grid-column: 2/2;
-    grid-row: 1/3;
-}
-
-.canteens-grid-item-three{
-}
-.canteens-grid-item-four{
-    grid-column: 2/2;
-    grid-row: 2/3;
-}
-
 .canteens-photos{
     object-fit: cover; 
     max-width: 100%;
@@ -372,18 +360,10 @@ footer{
 }
 
 #canteens-photo-credit{
-    padding-left: 2vw;
+    padding-top: 2vw;
     font-size: 11px;
     padding-top: 0.5rem;
 }
-
-.canteens-grid-item-five{
-    
-}
-.-grid-item-six{
-    
-}
-
 /*-------- Accessibility --------*/
 
 
