--- a/css/style.css
+++ b/css/style.css
@@ -364,6 +364,67 @@ footer{
     font-size: 11px;
     padding-top: 0.5rem;
 }
+
+    .canteens-grid-item-one{
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+        @media (max-width: 850px){
+            grid-column: 1 / 3;
+            grid-row: 1 / 2;
+        }
+    }
+    
+    .canteens-grid-item-two{
+        grid-column: 2 / 3;
+        grid-row: 1 / 3;
+        padding-top: 2rem;
+        width: fit-content;
+        height: 40vh;
+        @media (max-width: 850px){
+            grid-column: 1 / 3;
+            grid-row: 2 / 3;
+            width: fit-content;
+        }
+    }
+    
+    .canteens-grid-item-three{
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        @media (max-width: 850px){
+            grid-column: 1 / 3;
+            grid-row: 3 / 4;
+        }
+    }
+    .canteens-grid-item-four{
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+        padding-top: 2rem;
+        width: 40vw;
+        height: 40vh;
+        @media (max-width: 850px){
+            grid-column: 1 / 3;
+            grid-row: 4 / 5;
+            height: fit-content;
+            width: fit-content;
+        }
+    }
+    
+    .canteens-grid-item-five{
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+        @media (max-width: 850px){
+            grid-column: 1 / 3;
+            grid-row: 5 / 6;
+        }
+    }
+    
+    .canteens-grid-item-six{
+        grid-column: 2/3;
+        grid-row: 3 / 4;
+        padding-top: 2rem;
+        width: 40vw;
+        height: 40vh;
+}
 /*-------- Accessibility --------*/
 
 
