Css topical test

--- a/css/style.css
+++ b/css/style.css
@@ -435,3 +435,9 @@ footer{
 
 /*-------- Topical --------*/
 
+.topical-main{
+  margin-top: 10px;
+  margin-bottom: 100px;
+  margin-right: 150px;
+  margin-left: 80px;
+}
