Changed topical line height

--- a/css/style.css
+++ b/css/style.css
@@ -442,17 +442,16 @@ footer{
     padding-left: 2rem;
     padding-right: 2rem;
     padding-top: 2rem;
-    padding-bottom: 2rem;
-}
+    padding-bottom: 2rem; 
+} 
 
-.topical-main > p{
-    float: 1000px;   
+.topical-text-content{
+    line-height: 21pt;
 }
-
 
 .topical-photos{
 position: relative;
-bottom: 1550px;
+bottom: 1750px;
 display: flex;
   width: 450px;
   height: 350px;
@@ -469,13 +468,15 @@ display: flex;
     float: left;
     margin-left: 52vw; 
     position: relative;
-    bottom: 1550px;
+    bottom: 1750px;
     padding-top: 0.5rem;
     font-size: 0.7rem;
     padding-left: 2vw;
     white-space: nowrap;
     overflow: hidden;
 }
+
+
 
 /*-------- Accessibility --------*/
 
