--- a/css/style.css
+++ b/css/style.css
@@ -295,9 +295,10 @@ footer{
 
 .photos-p35{
     object-fit: cover;
-    max-width: 100%;
-    height: 300px;
     align-items: center;
+    height: 300px;
+    width: auto;
+    max-width: 100%;
 }
 
 .photo-credit-p35{
@@ -479,11 +480,35 @@ display: flex;
 
 /*-------- Accessibility --------*/
 
-.accessibility-body{
+.body-accessibility{
     background-color: #dcf0f8;
 }
 
-.container-p35{
+.main-accessibility{
+    background-color: #f0f7f4;
+    margin-left: 17vw;
+    margin-right: 17vw;  
+    margin-top: 3vh;
+    margin-bottom: 3vh; 
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+
+    @media(max-width: 799px){
+        margin-left: 8vw;
+        margin-right: 8vw;  
+    }
+}
+
+.h2-accessibility{
+    margin-left: 0;
+    margin-top: 0.8rem;
+}
+
+/* GRID */
+
+.container-accessibility{
     display: grid;
     margin-top: 0;
     margin-bottom: 0;
@@ -492,30 +517,27 @@ display: flex;
     gap: 1rem;
 }
 
-.accessibility-main{
-    background-color: #f0f7f4;
-    margin-left: 17vw;
-    margin-right: 17vw;  
-    margin-top: 3vh;
-    margin-bottom: 3vh; 
-    padding-left: 2rem;
-    padding-right: 2rem;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+.containter-accessibility > p{
+    font-size: 1.1rem;
+    line-height: 1.4rem;
 }
 
-.photo-accessibility{
+.item-one-accessibility{
+
+}
+
+.item-two-accessibility{
     margin-top: 3rem;
     margin-bottom: 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    @media(max-width: 1399px){
-        flex-flow:wrap;
+    @media(max-width: 799px){
+        flex-flow: wrap;
     }
 }
 
-.photo-accessibility > img{
+.item-two-accessibility > img{
     margin-left: 1rem;
     margin-right: 1rem;
     margin-bottom: 1rem;
@@ -524,4 +546,9 @@ display: flex;
     border-style:solid;
     object-fit: cover;
     max-width: 100%;
+    min-width: 0;
+}
+
+.item-three-accessibility{
+
 }
