--- a/css/style.css
+++ b/css/style.css
@@ -355,15 +355,22 @@ footer{
 
 .canteens-photos{
     object-fit: cover; 
-    max-width: 100%;
-    height: 300px;
+    width: 600px;
+    height: 280px;
+    align-items: center;
+}
+
+.canteens-mazemap-photo{
+    object-fit: cover; 
+    width: 600px;
+    height: 340px;
     align-items: center;
 }
 
 #canteens-photo-credit{
-    padding-top: 2vw;
-    font-size: 11px;
     padding-top: 0.5rem;
+    font-size: 0.7rem;
+    padding-left: 2vw;
 }
 
     .canteens-grid-item-one{
