--- a/css/style.css
+++ b/css/style.css
@@ -128,22 +128,18 @@ h2{
     grid-row: 6;
 }
 
-
-
-
 /*footer 1*3 grid both pc and mobile views*/
 
 footer{
     display: grid;
     grid-template-columns: auto auto auto;
-    background: #0ab4ba;
     font-size: small;
-    
 }
 
 .footer-container{
     grid-row: 1;
     padding-top: 1rem;
+    padding-bottom: 1rem;
     background: #0ab4ba;
     text-align: left
 }
@@ -151,8 +147,17 @@ footer{
 .footer-container li{
     list-style-type: none;
     line-height: 1.6;
-    
+    color: #140005;
 }
+
+.footer-container  li  b{
+    text-decoration:#140005 ;
+}
+
+.footer-container  li  a{
+    color: black;
+}
+
 /* mobile view when max-width 400px reaches pictures and texts appear in new lines*/
 
 @media only screen and (max-width: 400px) {
