--- a/css/style.css
+++ b/css/style.css
@@ -323,133 +323,6 @@ footer{
     max-width: 100%;
 }
 
-/*-------- Canteens PAGE OLD CSS --------*/
-
-.canteens-body{
-    background-color: #dcf0f8;
-}
-
-.main-canteens{
-    background-color: #f0f7f4;
-    margin-left: 10vw;
-    margin-right: 10vw;
-    margin-bottom: 3vh;
-    @media (max-width: 1000px){
-        margin-left: 3vw;
-        margin-right: 3vw;
-    }
-}
-
-.canteens-h1{
-    padding-left: 1.5rem;
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem; 
-}
-
-
-/*  GRID  */
-
-.canteens-grid-container{
-    display: grid;
-    margin: 0 auto;
-    gap: 1rem;
-}
-
-.canteens-grid-container > div{
-    padding-right: 1.5rem;
-    padding-left: 1.5rem;
-    padding-bottom: 1.5rem;
-    display: flex;
-    justify-content: center;
-    flex-flow: column wrap;
-}
-
-.canteens-grid-container > div > p{
-    font-size: 16px;
-    line-height: 1.4em;
-}
-
-.canteens-photos{
-    object-fit: cover; 
-    width: 600px;
-    height: 280px;
-    align-items: center;
-}
-
-.canteens-mazemap-photo{
-    object-fit: cover; 
-    width: 600px;
-    height: 340px;
-    align-items: center;
-}
-
-#canteens-photo-credit{
-    padding-top: 0.5rem;
-    font-size: 0.7rem;
-    padding-left: 2vw;
-}
-
-    .canteens-grid-item-one{
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
-        @media (max-width: 850px){
-            grid-column: 1 / 3;
-            grid-row: 1 / 2;
-        }
-    }
-    
-    .canteens-grid-item-two{
-        grid-column: 2 / 3;
-        grid-row: 1 / 3;
-        padding-top: 2rem;
-        width: fit-content;
-        height: 40vh;
-        @media (max-width: 850px){
-            grid-column: 1 / 3;
-            grid-row: 2 / 3;
-            width: fit-content;
-        }
-    }
-    
-    .canteens-grid-item-three{
-        grid-column: 1 / 2;
-        grid-row: 2 / 3;
-        @media (max-width: 850px){
-            grid-column: 1 / 3;
-            grid-row: 3 / 4;
-        }
-    }
-    .canteens-grid-item-four{
-        grid-column: 2 / 3;
-        grid-row: 2 / 3;
-        padding-top: 2rem;
-        width: 40vw;
-        height: 40vh;
-        @media (max-width: 850px){
-            grid-column: 1 / 3;
-            grid-row: 4 / 5;
-            height: fit-content;
-            width: fit-content;
-        }
-    }
-    
-    .canteens-grid-item-five{
-        grid-column: 1 / 2;
-        grid-row: 3 / 4;
-        @media (max-width: 850px){
-            grid-column: 1 / 3;
-            grid-row: 5 / 6;
-        }
-    }
-    
-    .canteens-grid-item-six{
-        grid-column: 2/3;
-        grid-row: 3 / 4;
-        padding-top: 2rem;
-        width: 40vw;
-        height: 40vh;
-}
-
 /*-------- Topical --------*/
 .topical-page{
     display: grid;
@@ -463,7 +336,7 @@ footer{
 }
 
 .topical-main{
-    background-color: #880aba;
+    background-color: #f0f7f4;
     padding: 20px;
     margin-left: 5vw;
     margin-right: 5vw;
@@ -474,10 +347,6 @@ footer{
     grid-template-columns: auto;
 }
 
-#topical-images{
-    background-color: red;
-}
-
 .topical-photos{
     object-fit: cover; 
     width: 550px;
@@ -486,6 +355,8 @@ footer{
     margin-top: 2vh;
     width: 90%;
     height: 35rem;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 .topical-caption{
