--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ h1{
 }
 
 h2{
-    margin-left: 2rem;
+    margin-left: 1rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.8rem;
     font-weight: 600;  
@@ -254,8 +254,8 @@ footer{
     margin-bottom: 3vh;
     margin-top: 3vh;
     @media (max-width: 799px){
-        margin-left: 3vw;
-        margin-right: 3vw;
+        margin-left: 2vw;
+        margin-right: 2vw;
     }
 }
 
@@ -353,8 +353,8 @@ footer{
     margin-top: 3vh;
     margin-bottom: 3vh;
     @media (max-width: 799px){
-        margin-left: 3vw;
-        margin-right: 3vw;
+        margin-left: 2vw;
+        margin-right: 2vw;
     }
 }
 
@@ -412,14 +412,13 @@ footer{
     padding-bottom: 2rem;
 
     @media(max-width: 799px){
-        margin-left: 3vw;
-        margin-right: 3vw;  
+        margin-left: 2vw;
+        margin-right: 2vw;  
     }
 }
 
 .h2-accessibility{
-    margin-left: 0;
-    margin-top: 0.8rem;
+    margin-bottom: 0;
 }
 
 .p-accessibility{
@@ -430,7 +429,6 @@ footer{
 /* GRID */
 
 .container-accessibility{
-    display: grid;
     margin-top: 0;
     margin-bottom: 0;
     margin-right: auto;
@@ -438,23 +436,33 @@ footer{
     gap: 1rem;
 }
 
-
-
-.item-two-accessibility{
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    @media(max-width: 799px){
+/*items inside container*/
+@media(max-width: 799px){
+    .container-accessibility > div:nth-child(2){
+        display: flex;
         flex-flow: wrap;
+        margin-top: 3rem;
+        margin-bottom: 1.5rem;
+        align-items: center;
+        justify-content: center;
     }
 }
 
-.item-two-accessibility > img{
-    margin-left: 1rem;
-    margin-right: 1rem;
+
+.items-accessibility{
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/*universal image style*/
+
+.img-accessibility{
+    margin-right: 0.5rem;
     margin-bottom: 1rem;
+    margin-left: 0.5rem;
     border-width: 2px;
     border-color: black;
     border-style:solid;
