--- a/css/style.css
+++ b/css/style.css
@@ -352,9 +352,12 @@ footer{
     margin-right: 20vw;
     margin-top: 3vh;
     margin-bottom: 3vh;
-    @media (max-width: 799px){
+}
+
+@media(max-width: 799px){
+    .topical-page{
         margin-left: 2vw;
-        margin-right: 2vw;
+        margin-right: 2vw;  
     }
 }
 
@@ -413,8 +416,10 @@ footer{
     padding-right: 1.5rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
+}
 
-    @media(max-width: 799px){
+@media(max-width: 799px){
+    .main-accessibility{
         margin-left: 2vw;
         margin-right: 2vw;  
     }
