--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@
 
 /**** article/main ***/
 
-
 body{
     padding: 0px;
     margin: 0px;
@@ -62,7 +61,6 @@ h3{
 
 /**Body-Grid 6*3 PC view**/
 
-
 .grid-container{
     margin-left: 2rem;
     display: grid;
@@ -89,16 +87,14 @@ h3{
     width: 98%;
     background-image: url("../media/pilestredet.jpg");
     background-size: cover;
-    height: 35vw;
-    
+    height: 35vw; 
 }
 
 .text-left{
     margin-left: 2rem;
     display: grid;
     grid-column: 1/2;
-    grid-row: 6;
-    
+    grid-row: 6;   
 }
 
 .image-right{
@@ -175,67 +171,67 @@ footer{
 
     [class*="header"] {
         grid-template-columns: auto auto auto;
-      }
+    }
 
     [class*="title1"] {
         grid-column: 1/-1; 
-      }
+    }
 
     [class*="title2"] {
         grid-column: 1/-1;
-      }
+    }
 
     [class*="ingress"] {
         grid-column: 1/-1;
         grid-row: 3;
         margin-right: 2rem;
-      }
+    }
 
     [class*="image-left"] {
         grid-column: 1/3;
         grid-row: 4;
         height: 50vw;
         width: 100%;
-      }
+    }
 
     [class*="text-left"] {
         grid-column: 1/3;
         grid-row: 6;
-      }   
+    }   
 
-      [class*="photo-ref-left"] {
+    [class*="photo-ref-left"] {
         margin-left: 2rem;
         grid-column: 1/3;
         grid-row: 5;
-      }  
+    }  
 
-      [class*="image-right"] {
+    [class*="image-right"] {
         margin-left: 2rem;
         grid-column: 1/3;
         grid-row: 7;
         height: 50vw;
         width: 100%;
-      }  
+    }  
 
     [class*="text-right"] {
         margin-left: 2rem;
         grid-column: 1/3;
         grid-row: 9;
-      }  
+    }  
 
       [class*="photo-ref-right"] {
         margin-left: 2rem;
         grid-column: 1/3;
         grid-row: 8;
-      }  
+    }  
 
       .footer-container ul {
         padding-inline-start: 20px;
     }
+
     .header {
         line-height: 3.5rem;
-    }
-     
+    }  
   }
 
 
@@ -354,6 +350,7 @@ footer{
     margin-bottom: 3vh;
 }
 
+/*decreased margin on the sides for responsiveness on smaller devices*/
 @media(max-width: 799px){
     .topical-page{
         margin-left: 4vw;
@@ -374,13 +371,13 @@ footer{
     margin-top: 0;
 }
 
-
 .list-topical > li{
     padding-top: 1rem;
     font-size: 1rem;
     line-height: 1.5rem;
 }
 
+/*used to style all images in the topical page*/
 .topical-photos{
     object-fit: cover;
     align-items: center;
@@ -392,13 +389,12 @@ footer{
     margin-right: auto;
 }
 
+/*small text below each image to mention the source*/
 .topical-caption{
     padding-top: 0.5rem;
     font-size: 0.7rem;
     padding-left: 2vw;
 }
-
-
 
 /*-------- Accessibility --------*/
 
@@ -418,6 +414,7 @@ footer{
     padding-bottom: 2rem;
 }
 
+/*decreases the margin to take advantage of the width for smaller devices*/
 @media(max-width: 799px){
     .main-accessibility{
         margin-left: 4vw;
@@ -444,7 +441,7 @@ footer{
     gap: 1rem;
 }
 
-/*items inside container*/
+/*this item has two images which should be stacked vertically on smaller devices*/
 @media(max-width: 799px){
     .container-accessibility > div:nth-child(2){
         display: flex;
